<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>JavaUtils</groupId>
	<artifactId>javautils</artifactId>
	<version>1.2.0-RELEASE</version>
	<name>JavaUtils</name>
	<build>
		<finalName>JavaUtils-${project.version}</finalName>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
        			<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Der-Zauberer Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/Der-Zauberer/JavaUtils</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</distributionManagement>
</project>